--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
     src: url(../fond/Raleway/Raleway-VariableFont_wght.ttf);
     src: url(../fond/Raleway/Raleway-Italic-VariableFont_wght.ttf);
 }    
-img{
+#profil{
     width: 150px;
     height: 150px;
     object-fit: cover;
@@ -13,18 +13,22 @@ img{
 }
 nav{
     background-color: #2c1d27;
-    background-size:auto;
     width: 1160px;
     height: 100px;
-    margin: 0%; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+a{
+    color: white;
+    text-decoration: none;
 }
 body{
     width: 1160px;
+    margin-left: 200px;
     text-align: center;
     background-color: #782221;
-    background-size: auto;
-    color: white;
-    
+    color: white;    
 }
 main{
     background-color: white;
@@ -42,7 +46,6 @@ main{
     background-color: #782221;
     width: 350px;
     padding-right: 50px;
-
 }
 h1{
     font-family: "lato";
@@ -54,4 +57,7 @@ p{
     font-family: "raleway";
     text-indent: 20px;
 }
-
+img{
+    width: 40px; height: 40px;
+    margin: 5px;
+}
