--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,9 @@ a{
     color: white;
     text-decoration: none;
 }
+a:hover{
+    text-decoration: underline;
+}
 body{
     width: 1160px;
     margin-left: 200px;
@@ -60,4 +63,7 @@ p{
 img{
     width: 40px; height: 40px;
     margin: 5px;
+}
+img:hover{
+    opacity: 0.5;
 }
